# ascii_maker

./: .gitignore  README.md  pyproject.toml  skill.md
ascii_maker/: __init__.py  __main__.py  app.py  cli.py
ascii_maker/core/: charsets.py  color.py  dither.py  processor.py  reader.py  writer.py
ascii_maker/tui/: controls.py  preview.py  timeline.py
ascii_maker/utils/: cache.py  terminal.py
tests/: test_charsets.py  test_color.py  test_dither.py  test_processor.py  test_reader.py  test_writer.py
web/: index.html  style.css
web/js/: app.js  charsets.js  dither.js  gif-parser.js  processor.js  renderer.js
